@@ -95,6 +95,7 @@ ts::PSIPlugin::PSIPlugin(TSP* tsp_) :
 bool ts::PSIPlugin::start()
 {
     _logger_options.load(*this);
+    _display_options.load(*this);
     _logger = new PSILogger(_logger_options, _display, *tsp);
     return !_logger->hasErrors();
 }
