@@ -4,6 +4,9 @@ TSDuck Change Log and Release Notes
 
 Version (next)
 
+- Added option --default-pds to tspsi, tstables, tstabdump, plugin psi
+  and plugin tabdump.
+
 - Removed command tsgentab and associated plugins. This command is now
   obsolete and has been superseded by the more general tstabcomp, the
   PSI/SI table compiler.
